# legal-doc-analysis

./: Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
lexcrisis_env/: env.py  models.py  tasks.py
my_env/: __init__.py  env.py  graders.py  models.py  tasks.py
server/: app.py  ui.html
