[project]
name = "lexcrisis"
version = "1.0.0"
description = "OpenEnv benchmark for legal operations incident response in product-liability litigation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.40.0",
  "openenv-core>=0.1.13",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
server = "main:main"

[tool.setuptools]
packages = ["lexcrisis_env", "my_env", "server"]
